# gliner2-rust

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  PLAN2.md  README.md  RUST_GUIDELINES.md  audit.toml
debug_comparison/: compare_pipeline.py  compare_step_by_step.py  python_parity_reference.py
docs/: index.html
src/: BACK_STORY.md  config.rs  error.rs  lib.rs  tokenizer.rs
src/batch/: collator.rs  mod.rs  preprocessed.rs
src/inference/: engine.rs  mod.rs
src/model/: candle_encoder.rs  classifier.rs  count_embed.rs  count_pred.rs  deberta_v3.rs  extractor.rs  loading.rs  mod.rs  span_rep.rs  weight_mapping.rs
src/schema/: builder.rs  mod.rs  types.rs
tests/: integration_test.rs  python_parity_test.rs  real_inference_test.rs
